# semantic-kernel-orchestrator

./: .chainlit  .env  .gitignore  README.md  RUN_UI.md  chainlit.md  debug_planner.py  main.py  pyproject.toml  simple_test.py  test.py  ui.py
.chainlit/: config.toml
samples/magnetic/: magentic.py  magentic.txt
samples/ollama/: tutorial.txt
samples/processes/: processes.txt  step01_processes.py
src/: __init__.py
src/agents/: __init__.py  communication_agent.py  crm_specialist.py  document_specialist.py  product_specialist.py  sales_assistant.py
src/agents/tools/: __init__.py  crm_tools.py  document_generator_tools.py  email_calendar_tools.py  product_catalog_tools.py
src/core/: __init__.py  config.py  types.py
src/orchestration/: __init__.py  magentic_coordinator.py  workflow_manager.py
src/planner/: __init__.py  planner_agent.py  schemas.py
